--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cli-helper",
     "cli-utils"
   ],
-  "author": "harris jose",
+  "author": "harrisjose@outlook.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/harrisjose/cute-menu/issues"
